[package]
name = "myne"
version = "0.1.0"
authors = ["Michał Sidor (Michcioperz) <public+git@meekchopp.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epub = "1.2.2"
cursive = { version = "0.14.1", features = ["crossterm-backend"] }
better-panic = "0.2.0"
url = "2.1.1"
html2md = "0.2.9"
