[package]
name = "myne"
description = "commandline EPUB reader"
version = "0.2.0"
authors = ["Michał Sidor (Michcioperz) <public+git@meekchopp.es>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0+"
repository = "https://git.sr.ht/~michcioperz/myne"
keywords = ["epub", "ebook", "cli"]
categories = ["command-line-utilities"]

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
codegen-units = 1

[dependencies]
epub = "1.2.2"
cursive = { version = "0.14.1", features = ["crossterm-backend", "markdown"], default-features = false}
better-panic = "0.2.0"
url = "2.1.1"
html2md = "0.2.9"
